Alteradas descrições dos projetos.

--- a/index.html
+++ b/index.html
@@ -53,27 +53,21 @@
             <div class="card">
                 <img src="Images/netflix.png" alt="Netflix">
                 <h5>Netflix</h5>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum suscipit maiores molestiae sint
-                    dolorem cumque quasi beatae, id dolor sed molestias autem totam accusantium voluptatum
-                    ullam ducimus quis aut blanditiis!</p>
+                <p>Projeto desenvolvido usando HTML e CSS. Um clone da tela inicial do netflix.</p>
                 <a>Ver projeto</a>
             </div>
 
             <div class="card">
                 <img src="Images/crono.png">
                 <h5>Cronometro</h5>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum suscipit maiores molestiae sint
-                    dolorem cumque quasi beatae, id dolor sed molestias autem totam accusantium voluptatum
-                    ullam ducimus quis aut blanditiis!</p>
+                <p>Projeto desenvolvido usando HTML e CSS.</p>
                 <a>Ver projeto</a>
             </div>
 
             <div class="card">
                 <img src="Images/starbucks.png">
                 <h5>Starbucks</h5>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum suscipit maiores molestiae sint
-                    dolorem cumque quasi beatae, id dolor sed molestias autem totam accusantium voluptatum
-                    ullam ducimus quis aut blanditiis!</p>
+                <p>Projeto desenvolvido usando HTML, CSS e Java Script..</p>
                 <a href="https://starruth.netlify.app/" target="_blank">Ver projeto</a>
             </div>
         </div>
