--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="Images/starbucks.png">
                 <h5>Starbucks</h5>
                 <p>Projeto desenvolvido usando HTML, CSS e Java Script..</p>
-                <a href="https://starruth.netlify.app/" target="_blank">Ver projeto</a>
+                <a href="https://ruthlopesdiniz.github.io/Tela-inicial-Starbucks/" target="_blank">Ver projeto</a>
             </div>
         </div>
 
