Adicionando link do projeto Clone Netflix.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
             <div class="card">
                 <img src="Images/netflix.png" alt="Netflix">
                 <h5>Netflix</h5>
-                <p>Projeto desenvolvido usando HTML e CSS. Um clone da tela inicial do netflix.</p>
-                <a>Ver projeto</a>
+                <p>Aplicação desenvolvida ultilizando HTML, CSS e JAVA SCRIPT.
+                    Ultiliza o evento addEventListener(Java Script) para verificar se botão foi clicado e mostrar ou esconder texto.
+                    </p>
+                <a href="https://ruthlopesdiniz.github.io/Clone-tela-NETFLIX/" target="_blank">Ver projeto</a>
             </div>
 
             <div class="card">
