--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="card">
                 <img src="Images/crono.png">
                 <h5>Cronometro</h5>
-                <p>Projeto desenvolvido usando HTML e CSS.</p>
-                <a>Ver projeto</a>
+                <p>Projeto desenvolvido usando HTML e CSS e Java Script. </p>
+                <a href="https://ruthlopesdiniz.github.io/CRONOMETRAR/" target="_blank">Ver projeto</a>
             </div>
 
             <div class="card">
