--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <h2 class="portifolio"> Porti<span>fólio</span></h2>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li class="home"><a href="#home">Home</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#projetosId">Projetos</a></li>
                 <li><a href="#faleComigo">Fale comigo</a></li>
@@ -32,7 +32,7 @@
 
     <div class="meu-nome">
         <h1>Ruth<span>Diniz</span></h1>
-        <h3>Desenvovedora Front End</h3>
+        <h3>Desenvolvedora Front End</h3>
     </div>
 
     <section id="sobre">
@@ -41,7 +41,7 @@
         <div class="sobremim">
             <h2>Sobre mim</h2>
             <p>Eu sou uma programadora Front end, com experiência em HTML, CSS e Java Script. Minha função é desenvolver
-                aplicações usando estas linguagens de programação com o objetivo de resolver problemas e facilitar a
+                aplicações usando estas tecnologias com o objetivo de resolver problemas e facilitar a
                 vida das pessoas.</p>
             <button><a href="#faleComigo"> Entre em contato</a></button>
         </div>
@@ -56,20 +56,22 @@
                 <p>Aplicação desenvolvida ultilizando HTML, CSS e JAVA SCRIPT.
                     Ultiliza o evento addEventListener(Java Script) para verificar se botão foi clicado e mostrar ou esconder texto.
                     </p>
-                <a href="https://ruthlopesdiniz.github.io/Clone-tela-NETFLIX/" target="_blank">Ver projeto</a>
+                <a href="https://regal-chebakia-05123e.netlify.app/" target="_blank">Ver projeto</a>
             </div>
 
             <div class="card">
                 <img src="Images/crono.png">
                 <h5>Cronometro</h5>
-                <p>Projeto desenvolvido usando HTML e CSS e Java Script. </p>
-                <a href="https://ruthlopesdiniz.github.io/CRONOMETRAR/" target="_blank">Ver projeto</a>
+                <p>Desenvolvido com HTML, CSS e Java Script. Nele é possível fazer a contagem do tempo a partir dos milésimos de segundos. 
+                    Inclui os botões para iniciar, pausar ou resetar o contador. </p>
+                <a href="https://statuesque-sunflower-58c107.netlify.app/" target="_blank">Ver projeto</a>
             </div>
 
             <div class="card">
                 <img src="Images/starbucks.png">
                 <h5>Starbucks</h5>
-                <p>Projeto desenvolvido usando HTML, CSS e Java Script..</p>
+                <p>Projeto desenvolvido usando HTML, CSS e Java Script. 
+                    Possibilita a troca na imagem principal da cor e variação do copo Starbucks ao clicar na imagem correspondente.</p>
                 <a href="https://ruthlopesdiniz.github.io/Tela-inicial-Starbucks/" target="_blank">Ver projeto</a>
             </div>
         </div>
