--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h5>Starbucks</h5>
                 <p>Projeto desenvolvido usando HTML, CSS e Java Script. 
                     Possibilita a troca na imagem principal da cor e variação do copo Starbucks ao clicar na imagem correspondente.</p>
-                <a href="https://ruthlopesdiniz.github.io/Tela-inicial-Starbucks/" target="_blank">Ver projeto</a>
+                <a href="https://mellow-marzipan-4f33df.netlify.app/" target="_blank">Ver projeto</a>
             </div>
         </div>
 
